feat(18377): Disallow setting duplicate roster (#19072)
Signed-off-by: mxtartaglia <maxi@swirldslabs.com>